# foxyapply

./: .dockerignore  .gitignore  Dockerfile  README.md  SPEC.md  TODOS.md  appservice.go  db.py  debug_run.py  easyapplybot.py  easyapplybot.spec  go.mod  go.sum  hiringfunnel.py  profiles.py  pyproject.toml  requirements.txt  run_profiles_batch.py  settings.py  test_easyapplybot.py
.github/workflows/: build-mac.yml  build.yml  release.yml
boards/: __init__.py  base.py  indeed.py  linkedin.py
frontend/bindings/foxyapply/: appservice.ts
frontend/bindings/foxyapply/internal/store/: index.ts  models.ts
frontend/src/: App.tsx
frontend/src/components/: ApplicationsPanel.test.tsx  ApplicationsPanel.tsx
hiringfunnel.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
internal/pybot/: events.go  events_test.go  http.go  http_test.go  manager.go  manager_test.go  platform_test.go
internal/store/: job-applications.go  linkedin-profiles.go  store.go
tests/: conftest.py  test_bot.py  test_db.py  test_hiringfunnel.py  test_profiles.py  test_settings.py  test_ux.py
