[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "hiringfunnel"
version = "0.1.0"
description = "LinkedIn Easy Apply bot with TUI profile management"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "selenium>=4.15.0",
    "beautifulsoup4>=4.12.0",
    "fake-useragent>=1.4.0",
    "openai>=1.6.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.5.0",
    "lxml>=4.9.0",
    "requests>=2.31.0",
    "questionary>=2.0.0",
    "rich>=13.0.0",
]

[project.scripts]
hiringfunnel = "hiringfunnel:main"

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[tool.setuptools.packages.find]
where = ["."]
include = ["hiringfunnel*", "easyapplybot*", "profiles*"]
